feat(common, product-service, order-service, compose): Kafka 기반 재고 이벤트 파이프라인 도입
- StockEvent 레코드 및 Topics.INVENTORY_STOCK_EVENTS_V1 추가
- messaging 구조 도입: producer/consumer + KafkaStockEventProducer, StockEventsConsumer
- StockServiceImpl에서 재고 변경 시 이벤트 발행 연동(sendStockChanged, sendSoldOut)
- KafkaTopicConfig로 inventory.stock-events.v1 토픽 생성(파티션 6)
- product-service application.yml: Spring Kafka 설정(bootstrap-servers, JsonSerializer/Deserializer, type headers off, default type=StockEvent, concurrency=6)
- docker-compose: 단일 노드 Kafka(bitnami 3.7) 추가(내부 kafka:9092, 외부 localhost:9094)