@@ -1,13 +1,10 @@
 package com.app.preorder.productservice.service;
 
-import com.app.preorder.common.dto.PendingQuantityInternal;
 import com.app.preorder.common.dto.StockRequestInternal;
 import com.app.preorder.common.dto.StockInternal;
 import com.app.preorder.common.exception.custom.InsufficientStockException;
-import com.app.preorder.common.exception.custom.StockNotFoundException;
-import com.app.preorder.common.type.ProductStatus;
-import com.app.preorder.productservice.client.OrderServiceClient;
 import com.app.preorder.productservice.domain.entity.Stock;
+import com.app.preorder.productservice.messaging.producer.StockEventProducer;
 import com.app.preorder.productservice.factory.ProductFactory;
 import com.app.preorder.productservice.repository.StockRepository;
 import lombok.RequiredArgsConstructor;
@@ -15,8 +12,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,84 +19,91 @@ public class StockServiceImpl implements StockService {
 
     private final StockRepository stockRepository;
     private final ProductFactory productFactory;
-    private final OrderServiceClient orderClient;
+    private final StockEventProducer stockEvents;
 
     @Override
     @Transactional(readOnly = true)
     public List<StockInternal> getStocksByIds(List<Long> productIds) {
-        List<Stock> stocks = stockRepository.findStocksByIds(productIds);
+        List<Stock> stocks = stockRepository.findByProductIds(productIds);
         return stocks.stream()
                 .map(productFactory::toStockInternal)
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    /* ========== 예약/해제(배치) ========== */
 
     @Override
     @Transactional
-    public void deductStocks(List<StockRequestInternal> items) {
-        List<Long> productIds = items.stream()
-                .map(StockRequestInternal::getProductId)
-                .toList();
+    public void reserveStocks(List<StockRequestInternal> items) {
+        for (StockRequestInternal it : items) {
+            long pid = it.getProductId();
+            long qty = it.getQuantity();
+            if (qty <= 0) continue;
 
-        List<Stock> stocks = stockRepository.findStocksByIds(productIds);
-
-        Map<Long, Stock> stockMap = stocks.stream()
-                .collect(Collectors.toMap(stock -> stock.getProduct().getId(), stock -> stock));
-
-        //  pending 수량 미리 조회
-        Map<Long, Long> pendingMap = orderClient.getPendingQuantities(productIds).stream()
-                .collect(Collectors.toMap(PendingQuantityInternal::getProductId, PendingQuantityInternal::getQuantity));
-
-        for (StockRequestInternal item : items) {
-            Long productId = item.getProductId();
-            Long requestQty = item.getQuantity();
-
-            Stock stock = stockMap.get(productId);
-            if (stock == null) {
-                throw new StockNotFoundException("해당 상품의 재고를 찾을 수 없습니다.");
+            if (stockRepository.reserve(pid, qty) != 1) {
+                throw new InsufficientStockException("재고 부족(예약 실패): productId=" + pid + ", qty=" + qty);
             }
-
-            Long pending = pendingMap.getOrDefault(productId, 0L);
-            Long availableStock = stock.getStockQuantity() - pending;
-
-            if (availableStock < requestQty) {
-                throw new InsufficientStockException(
-                        "상품 ID [" + productId + "]의 재고가 부족합니다. 요청 수량: " + requestQty + ", 사용 가능 재고: " + availableStock
-                );
-            }
-
-            stock.decrease(requestQty);
-
-            if (stock.getStockQuantity() == 0) {
-                stock.getProduct().updateStatus(ProductStatus.SOLD_OUT);
-            }
+            // ✅ 이벤트 발행
+            long available = stockRepository.findAvailable(pid).orElse(0L);
+            stockEvents.sendStockChanged(pid, available);
         }
     }
 
     @Override
     @Transactional
+    public void unreserveStocks(List<StockRequestInternal> items) {
+        for (StockRequestInternal it : items) {
+            long pid = it.getProductId();
+            long qty = it.getQuantity();
+            if (qty <= 0) continue;
+
+            if (stockRepository.unreserve(pid, qty) != 1) {
+                throw new IllegalStateException("예약 해제 실패: productId=" + pid + ", qty=" + qty);
+            }
+            // ✅ 이벤트 발행
+            long available = stockRepository.findAvailable(pid).orElse(0L);
+            stockEvents.sendStockChanged(pid, available);
+        }
+    }
+
+    /* ========== 실제 차감(배치) ========== */
+
+    @Override
+    @Transactional
+    public void commitStocks(List<StockRequestInternal> items) {
+        for (var it : items) {
+            long pid = it.getProductId(), qty = it.getQuantity();
+            if (qty <= 0) continue;
+
+            if (stockRepository.consumeReserved(pid, qty) != 1) {
+                throw new InsufficientStockException("커밋 실패: productId=" + pid + ", qty=" + qty);
+            }
+            // ✅ 이벤트 발행
+            long available = stockRepository.findAvailable(pid).orElse(0L);
+            stockEvents.sendStockChanged(pid, available);
+            if (available == 0) {
+                stockEvents.sendSoldOut(pid);
+            }
+        }
+        // 품절 상태 전환을 “이벤트 소비자”에서 하려면, 위의 SOLD_OUT만 보내고
+        // 여기선 상태 변경을 하지 않는 게 더 깔끔함.
+    }
+
+    /* ========== 보상/재입고(배치) ========== */
+    @Override
+    @Transactional
     public void restoreStocks(List<StockRequestInternal> items) {
-        List<Long> productIds = items.stream()
-                .map(StockRequestInternal::getProductId)
-                .toList();
+        for (StockRequestInternal it : items) {
+            long pid = it.getProductId();
+            long qty = it.getQuantity();
+            if (qty <= 0) continue;
 
-        List<Stock> stocks = stockRepository.findStocksByIds(productIds);
-
-        Map<Long, Stock> stockMap = stocks.stream()
-                .collect(Collectors.toMap(stock -> stock.getProduct().getId(), stock -> stock));
-
-        for (StockRequestInternal item : items) {
-            Stock stock = stockMap.get(item.getProductId());
-
-            if (stock == null) {
-                throw new StockNotFoundException("해당 상품 ID [" + item.getProductId() + "]에 대한 재고 정보를 찾을 수 없습니다.");
+            if (stockRepository.restock(pid, qty) != 1) {
+                throw new IllegalStateException("재입고(보상) 실패: productId=" + pid + ", qty=" + qty);
             }
-
-            stock.updateStockQuantity(stock.getStockQuantity() + item.getQuantity());
-
-            //  재고가 0에서 증가하면 ENABLED로 변경
-            if (stock.getStockQuantity() > 0) {
-                stock.getProduct().updateStatus(ProductStatus.ENABLED);
-            }
+            // ✅ 이벤트 발행
+            long available = stockRepository.findAvailable(pid).orElse(0L);
+            stockEvents.sendStockChanged(pid, available);
         }
     }
 }
